--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_flutter: ^2.2.6
-  flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.1.1
+  location: ^4.3.0
+  provider: ^6.0.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
