--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   location: ^4.3.0
   provider: ^6.0.1
   permission_handler: ^10.2.0
+  flutter_sound: ^8.1.4
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
