--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   permission_handler: ^10.3.0
   flutter_sound: ^9.2.13
   http: ^1.0.0
+  charts_flutter: ^0.12.0
+  faker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
