--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   faker: ^2.1.0
   geolocator: ^9.0.2
   flutter_launcher_icons: ^0.13.1
+  geocoding: ^2.1.0
+  flutter_spinkit: ^5.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
