--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_spinkit: ^5.2.0
   intl: ^0.17.0
+  syncfusion_flutter_gauges: ^21.2.4
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
