--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.17.0
   syncfusion_flutter_gauges: ^21.2.4
   font_awesome_flutter: ^10.5.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
