--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_auth: ^4.7.3
   cloud_firestore: ^4.8.5
   regexed_validator: ^2.0.0+1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
