--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   cloud_firestore: ^4.8.5
   regexed_validator: ^2.0.0+1
   fluttertoast: ^8.2.2
+  image_picker: ^1.0.2
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
